<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:textSize="14sp"
                android:textColor="#616161"
                android:fontFamily="sans-serif-medium"
                android:text="@string/team1_name" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:textSize="56sp"
                android:textColor="#000000"
                android:fontFamily="sans-serif-light"
                android:text="@string/team1_points" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="threePointsTeamA"
                android:text="@string/th_points"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="20dp"
                tools:ignore="UsingOnClickInXml"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="twoPointsTeamA"
                android:text="@string/tw_points"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="onePointTeamA"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:text="@string/free_throw"
                tools:ignore="UsingOnClickInXml" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:textSize="14sp"
                android:textColor="#616161"
                android:fontFamily="sans-serif-medium"
                android:text="@string/team2_name" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:textSize="56sp"
                android:textColor="#000000"
                android:fontFamily="sans-serif-light"
                android:text="@string/team2_points" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="threePointsTeamB"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="20dp"
                android:text="@string/th_points"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="twoPointsTeamB"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:text="@string/tw_points"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="onePointTeamB"
                android:text="@string/free_throw"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                tools:ignore="UsingOnClickInXml" />


        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="bothScoreReset"
        android:layout_marginBottom="32dp"
        android:text="@string/re_button"
        tools:ignore="UsingOnClickInXml" />

</RelativeLayout>